Finish burger page and create curry page with links from index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         height="455">
     <ul>
         <li><a href="recipes/burger.html">Portobello Mushroom Burgers</a></li>
+        <li><a href="recipes/curry.html">Spicy Potato Curry</a></li>
     </ul>
 </body>
 </html>
