--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portobello Mushroom Burgers</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Portobello Mushroom Burgers</h1>
-</body>
+    <img src="../images/burger.jpg" />
+    <h3>Portobello mushroom burgers are the steak of veggie burgers.</h3>
+    <p>Serve these on buns with lettuce, tomato, and aioli sauce. Oh yeah!</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>4 portobello mushroom caps</li>
+      <li>1/4 cup balsamic vinegar</li>
+      <li>2 tablespoons olive oil</li>
+      <li>1 tablespoon minced garlic</li>
+      <li>1 teaspoon dried basil</li>
+      <li>1 teaspoon dried oregano</li>
+      <li>Salt and pepper to taste</li>
+      <li>4 (1 ounce) slices provolone cheese</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Place mushroom caps, smooth side up, in a shallow dish.</li>
+      <li>
+        Whisk together balsamic, oil, garlic, basil, and oregano in a small
+        bowl. Season with salt and pepper.
+      </li>
+      <li>
+        Pour vinaigrette over mushrooms. Let stand at room temperature for 15
+        minutes or so, turning twice.
+      </li>
+      <li>Preheat grill for medium-high heat.</li>
+      <li>
+        Brush grill grates with oil. Place mushrooms on grill, reserving
+        marinade for basting. Grill until just tender, 5 to 8 minutes per side,
+        brushing with marinade frequently.
+      </li>
+      <li>
+        Top mushrooms with cheese and continue grilling until cheese is melted,
+        about 2 minutes.
+      </li>
+    </ol>
+  </body>
 </html>
