--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="recipes/burger.html">Portobello Mushroom Burgers</a></li>
         <li><a href="recipes/curry.html">Spicy Potato Curry</a></li>
+        <li><a href="recipes/hash-browns.html">Crispy Hash Browns</a></li>
     </ul>
 </body>
 </html>
